# mlops_challenge_01

./: README.md  pyproject.toml
.github/workflows/: 01-code-checks.yml  02-manual-trigger-job.yml  03-deploy-ml-model.yml  04-code-checks.yml  04-test-ml-model.yml
experimentation/: train-classification-model.ipynb
src/: conda.yml  create-endpoint.yml  datasets-prod.yml  deploy-endpoint.yml  environment.yml  job-dev.yml  job-prod.yml  sample-request.json  sample-request.py
src/model/: train.py
src/model/mlruns/0/: meta.yaml
src/model/mlruns/0/b0817caff11c4ec9a3a7cfefadad0fa8/: meta.yaml
src/model/mlruns/0/b0817caff11c4ec9a3a7cfefadad0fa8/metrics/: training_accuracy_score  training_f1_score  training_log_loss  training_precision_score  training_roc_auc  training_score
src/model/mlruns/0/b0817caff11c4ec9a3a7cfefadad0fa8/tags/: mlflow.runName
src/model/mlruns/0/c78545e8b3654dbc8d1d012191fbf673/: meta.yaml
src/model/mlruns/0/c78545e8b3654dbc8d1d012191fbf673/metrics/: training_accuracy_score  training_f1_score  training_log_loss  training_precision_score  training_roc_auc  training_score
src/model/mlruns/0/c78545e8b3654dbc8d1d012191fbf673/tags/: mlflow.runName
src/model/mlruns/0/d4d50bcac7c14590a75a679e51ff8378/: meta.yaml
src/model/mlruns/0/d4d50bcac7c14590a75a679e51ff8378/metrics/: training_f1_score  training_log_loss  training_precision_score  training_recall_score  training_roc_auc  training_score
src/model/mlruns/0/d4d50bcac7c14590a75a679e51ff8378/tags/: mlflow.runName
tests/: test_train.py
(+36 files in other folders)
